feat: add job config table
