# backend/internal/infrastructure/google/database/repository/job_config/wireset.go
@@ -1,0 +1,7 @@
+package jobconfig
+
+import "github.com/google/wire"
+
+var Set = wire.NewSet(
+	NewJobConfigRepository,
+)
